// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Работа с DOM Автозамена элементов дерева тегов с сохранением вложенной структуры 1`] = `
<div
  class="item_1"
>
  <section
    class="item_2"
  >
    <div
      class="item_3"
    />
    <div
      class="item_3"
    />
  </section>
  <section
    class="item_2"
  >
    <div
      class="item_3"
    />
    <div
      class="item_3"
    />
  </section>
</div>
`;

exports[`Работа с DOM Вставка элементов: 5 последовательных тегов P с содержимым и аттрибутами 1`] = `
<body>
  <p>
    Привет, мир!
  </p>
  <p>
    Привет, мир!
  </p>
  <p>
    Привет, мир!
  </p>
  <p>
    Привет, мир!
  </p>
  <p>
    Привет, мир!
  </p>
</body>
`;

exports[`Работа с DOM Рекурсивное построение дерева тегов DIV с вложенностью 3, по 3 ветки в узле 1`] = `
<div
  class="item_1"
>
  <div
    class="item_2"
  >
    <div
      class="item_3"
    />
    <div
      class="item_3"
    />
    <div
      class="item_3"
    />
  </div>
  <div
    class="item_2"
  >
    <div
      class="item_3"
    />
    <div
      class="item_3"
    />
    <div
      class="item_3"
    />
  </div>
  <div
    class="item_2"
  >
    <div
      class="item_3"
    />
    <div
      class="item_3"
    />
    <div
      class="item_3"
    />
  </div>
</div>
`;
